tests/errors/nested_module_redecl.tau
module m{
    module nested{}
}
module m{
    module nested{}
}
func main(){
    import m;
}
