tests/errors/nested_module_redecl.err
resolver error: module redeclaration
 ==> ./tests/errors/nested_module_redecl.tau:1:1
1 |module m{
  |^^^^^^^^ one declaration here
...
4 |module m{
  |^^^^^^^^ another conflicting declaration here
